<resources>
    <string name="smscommunicator">SMS Communicator</string>
    <string name="smscommunicator_shortname">SMS</string>
    <string name="description_sms_communicator">Remote control AAPS using SMS commands.</string>
    <string name="smscommunicator_code_from_authenticator_for" comment="This is continuation of sentence: To [ACTION] reply with code">from Authenticator app for: %1$s followed by PIN</string>
    <string name="smscommunicator_otp_pin">Additional mandatory PIN at token end</string>
    <string name="smscommunicator_otp_pin_summary">Additional digits that should be memorised and glued at end of each generated One Time Password</string>
    <string name="smscommunicator_tab_otp_label">Authenticator setup</string>
    <string name="smscommunicator_code_verify_label">Code to check:</string>
    <string name="smscommunicator_code_verify_hint">OTP + PIN</string>
    <string name="smscommunicator_code_verify_info">The verification code consist of 6 digits displayed by Authenticator app (known as OTP) followed by 3 or more digits of mandatory PIN.</string>
    <string name="smscommunicator_otp_reset_btn">Reset Authenticators</string>
    <string name="smscommunicator_otp_reset_title">Reset Authenticator Key</string>
    <string name="smscommunicator_otp_reset_prompt">Are you sure to reset Authenticator key? It will render all currently configured Authenticators invalid, and you will need to set them up again.</string>
    <string name="smscommunicator_otp_reset_successful">New Authenticator Key was generated! Please use updated QRCode to provision authenticators.</string>
    <string name="smscommunicator_otp_export_title">Exporting OTP secret</string>
    <string name="smscommunicator_otp_export_prompt">Are you sure you want to copy OTP secret to clipboard?\n\nYou may only need that if your authenticator app have issues scanning QRCode, you want to enter it manually or you want to configure hardware OTP token using dedicated app.</string>
    <string name="smscommunicator_otp_export_successful">OTP secret (in Base32 format) exported and copied into clipboard. Paste it into authenticator or hardware OTP burner!</string>
    <string name="smscommunicator_otp_step1_install_header">1. Install Authenticator</string>
    <string name="smscommunicator_otp_step2_provisioning_header">2. Scan code to setup AAPS OTP codes</string>
    <string name="smscommunicator_otp_step3_test_header">3. Test One-Time-Password</string>
    <string name="smscommunicator_otp_reset_header">Reset Authenticators</string>
    <string name="smscommunicator_otp_install_info">On each follower phone install Authenticator app that support RFC 6238 TOTP tokens. Popular free apps are:\n • Authy\n • Google Authenticator\n • LastPass Authenticator\n • FreeOTP Authenticator</string>
    <string name="smscommunicator_otp_reset_warning">By resetting authenticator you make all already provisioned authenticators invalid. You will need to set up them again!</string>
    <string name="smscommunicator_otp_verification_ok">OK</string>
    <string name="smscommunicator_otp_verification_ivalid_size">INVALID SIZE!</string>
    <string name="smscommunicator_otp_verification_wrong_pin">WRONG PIN</string>
    <string name="smscommunicator_otp_verification_wrong_otp">WRONG OTP</string>
    <string name="sms_wrong_code">Wrong code. Command cancelled.</string>
    <string name="sms_timeout_while_waiting">Timeout while waiting for finish of previous pump communication</string>
    <string name="smscommunicator_allowednumbers">Allowed phone numbers</string>
    <string name="smscommunicator_allowednumbers_summary">+XXXXXXXXXX;+YYYYYYYYYY</string>
    <string name="smscommunicator_bolus_reply_with_code">To deliver bolus %1$.2fU reply with code %2$s</string>
    <string name="smscommunicator_meal_bolus_reply_with_code">To deliver meal bolus %1$.2fU reply with code %2$s</string>
    <string name="smscommunicator_temptarget_with_code">To set the Temp Target %1$s reply with code %2$s</string>
    <string name="smscommunicator_temptarget_cancel">To cancel Temp Target reply with code %1$s</string>
    <string name="smscommunicator_stops_ns_with_code">To disable the SMS Remote Service reply with code %1$s.\n\nKeep in mind that you\'ll able to reactivate it directly from the AAPS master smartphone only.</string>
    <string name="smscommunicator_stopped_sms">SMS Remote Service stopped. To reactivate it, use AAPS on master smartphone.</string>
    <string name="smscommunicator_calibration_reply_with_code">To send calibration %1$.2f reply with code %2$s</string>
    <string name="smscommunicator_bolus_failed">Bolus failed. Verify real state before sending another command!</string>
    <string name="smscommunicator_remote_bolus_min_distance_summary">Minimum number of minutes that must elapse between one remote bolus and the next</string>
    <string name="smscommunicator_remote_bolus_min_distance">How many minutes must elapse, at least, between one bolus and the next</string>
    <string name="smscommunicator_remote_bolus_min_distance_caveat">For your safety, to edit this preference you need to add at least 2 phone numbers.</string>
    <string name="smscommunicator_bolus_delivered">Bolus %1$.2f U delivered successfully</string>
    <string name="smscommunicator_meal_bolus_delivered">Meal Bolus %1$.2f U delivered successfully</string>
    <string name="smscommunicator_meal_bolus_delivered_tt">Target %1$s for %2$d minutes</string>
    <string name="smscommunicator_tt_set">Target %1$s for %2$d minutes set successfully</string>
    <string name="smscommunicator_tt_canceled">Temp Target canceled successfully</string>
    <string name="smscommunicator_remote_commands_allowed">Allow remote commands via SMS</string>
    <string name="smscommunicator_loop_has_been_disabled">Loop has been disabled</string>
    <string name="smscommunicator_loop_is_enabled">Loop is enabled</string>
    <string name="smscommunicator_pump_connect_with_code">To connect pump reply with code %1$s</string>
    <string name="smscommunicator_pump_connect_fail">Connection to pump failed</string>
    <string name="smscommunicator_pump_disconnect_with_code">To disconnect pump for %1$d minutes reply with code %2$s</string>
    <string name="smscommunicator_pump_disconnected">Pump disconnected</string>
    <string name="smscommunicator_reconnect">Pump reconnected</string>
    <string name="smscommunicator_remote_command_not_allowed">Remote command is not allowed</string>
    <string name="smscommunicator_remote_command_not_possible">Remote command is not possible</string>
    <string name="smscommunicator_not_available_mdi">Not available in MDI mode. Basal is a fixed Lantus injection and there is no pump to control.</string>
    <string name="smscommunicator_remote_bolus_not_allowed">Remote bolus not available. Try again later.</string>
    <string name="smscommunicator_basal_reply_with_code">To start basal %1$.2f U/h for %2$d min reply with code %3$s</string>
    <string name="smscommunicator_profile_reply_with_code">To switch profile to %1$s %2$d%% reply with code %3$s</string>
    <string name="smscommunicator_extended_reply_with_code">To start extended bolus %1$.2f U for %2$d min reply with code %3$s</string>
    <string name="smscommunicator_carbs_reply_with_code">To enter %1$dg at %2$s reply with code %3$s</string>
    <string name="smscommunicator_basal_pct_reply_with_code">To start basal %1$d%% for %2$d min reply with code %3$s</string>
    <string name="smscommunicator_suspend_reply_with_code">To suspend loop for %1$d minutes reply with code %2$s</string>
    <string name="smscommunicator_loop_resume_reply_with_code">To resume loop reply with code %1$s</string>
    <string name="smscommunicator_loop_disable_reply_with_code">To disable loop reply with code %1$s</string>
    <string name="smscommunicator_restart_reply_with_code">To restart AAPS reply with code %1$s</string>
    <string name="smscommunicator_restarting">AAPS is restarting</string>
    <string name="smscommunicator_tempbasal_set">Temp basal %1$.2fU/h for %2$d min started successfully</string>
    <string name="smscommunicator_extended_set">Extended bolus %1$.2fU for %2$d min started successfully</string>
    <string name="smscommunicator_carbs_set">Carbs %1$d  g entered successfully</string>
    <string name="smscommunicator_carbs_failed">Entering %1$dg of carbs failed</string>
    <string name="smscommunicator_tempbasal_set_percent">Temp basal %1$d%% for %2$d min started successfully</string>
    <string name="smscommunicator_tempbasal_failed">Temp basal start failed</string>
    <string name="smscommunicator_extended_failed">Extended bolus start failed</string>
    <string name="smscommunicator_basal_stop_reply_with_code">To stop temp basal reply with code %1$s</string>
    <string name="smscommunicator_extended_stop_reply_with_code">To stop extended bolus reply with code %1$s</string>
    <string name="smscommunicator_tempbasal_canceled">Temp basal canceled</string>
    <string name="smscommunicator_extended_canceled">Extended bolus canceled</string>
    <string name="smscommunicator_tempbasal_cancel_failed">Canceling temp basal failed</string>
    <string name="smscommunicator_extended_cancel_failed">Canceling extended bolus failed</string>
    <string name="smscommunicator_unknown_command">Unknown command or wrong reply</string>
    <string name="smscommunicator_another_bolus_in_queue">There is another bolus in queue. Try again later.</string>
    <string name="smscommunicator_wrong_duration">Wrong duration</string>
    <string name="smscommunicator_loop_suspended">Loop suspended</string>
    <string name="smscommunicator_loop_resumed">Loop resumed</string>
    <string name="smscommunicator_invalid_phone_number">Invalid SMS phone number</string>
    <string name="smscommunicator_calibration_sent">Calibration sent. Receiving must be enabled in xDrip+.</string>
    <string name="smscommunicator_calibration_failed">xDrip+ is not receiving calibrations</string>
    <string name="smscommunicator_message_body">Invalid message body</string>
    <string name="smscommunicator_report_pump_unreachable_summary">Send SMS if unreachable pump event is triggered</string>
    <string name="smscommunicator_pump_unreachable">Report pump unreachable</string>
    <string name="smscommunicator_set_lgs_reply_with_code">In order to switch Loop mode to LGS (Low Glucose Suspend) reply with code %1$s</string>
    <string name="smscommunicator_set_closed_loop_reply_with_code">In order to switch Loop mode to Closed loop reply with code %1$s</string>
    <string name="smscommunicator_current_loop_mode">Current loop mode: %1$s</string>
    <string name="wrong_format">Wrong format</string>
    <string name="sms_actual_bg">BG:</string>
    <string name="sms_last_bg">Last BG:</string>
    <string name="sms_delta">Delta:</string>
    <string name="sms_iob">IOB:</string>
    <string name="sms_bolus">Bolus:</string>
    <string name="sms_basal">Basal:</string>
    <string name="sms_min_ago">%1$dmin ago</string>
    <string name="sms_loop_suspended_for">Suspended (%1$d m)</string>
    <string name="sms_read_status_failed">Read status failed</string>
    <string name="sms_profile_switch_created">Profile switch created</string>
    <string name="sms_wrong_tbr_duration">TBR duration must be a multiple of %1$d minutes and greater than 0.</string>
    <string name="sensor_label">Sensor</string>
    <string name="statuslights_cannula_age">cannula age</string>
    <string name="statuslights_last_bolus_age">last bolus ago</string>
    <string name="statuslights_last_basal_age">last basal insulin ago</string>
    <string name="statuslights_insulin_req">APS insulinReq, current / 15-minute median (U)</string>
    <string name="statuslights_eventual_bg">APS lowest predicted and eventual glucose, and target</string>
    <string name="a11y_insulin_label">insulin</string>
</resources>