<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/status_lights_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="-3dp"
    android:layout_marginBottom="-3dp"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    app:alignContent="stretch"
    app:alignItems="stretch"
    app:flexDirection="row"
    app:flexWrap="wrap"
    app:justifyContent="space_around">

    <LinearLayout
        android:id="@+id/cannula_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/cannula_or_patch"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/statuslights_cannula_age"
            app:srcCompat="@drawable/ic_cp_age_cannula" />

        <TextView
            android:id="@+id/cannula_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            tools:text="1d12h" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/insulin_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/insulin_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/a11y_insulin_label"
            app:srcCompat="@drawable/ic_cp_age_insulin" />

        <TextView
            android:id="@+id/insulin_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            tools:text="12h" />

        <TextView
            android:id="@+id/reservoir_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:paddingStart="2dp"
            android:paddingEnd="0dp"
            tools:text="50+U" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/sensor_label"
            app:srcCompat="@drawable/ic_cp_age_sensor" />

        <TextView
            android:id="@+id/sensor_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            tools:text="1d12h" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/battery_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/battery_label"
            app:srcCompat="@drawable/ic_cp_age_battery" />

        <TextView
            android:id="@+id/pb_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="-"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/pb_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:paddingStart="2dp"
            android:paddingEnd="0dp"
            tools:text="100%" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/last_bolus_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/statuslights_last_bolus_age"
            app:srcCompat="@drawable/ic_cp_age_last_bolus" />

        <TextView
            android:id="@+id/last_bolus_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            tools:text="2h15m" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="/"
            android:textColor="?android:attr/textColorSecondary"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/last_bolus_dose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:paddingStart="2dp"
            android:textColor="?android:attr/textColorSecondary"
            tools:text="4.5U" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/last_basal_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/statuslights_last_basal_age"
            app:srcCompat="@drawable/ic_cp_age_last_basal" />

        <TextView
            android:id="@+id/last_basal_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            tools:text="21h30m" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="/"
            android:textColor="?android:attr/textColorSecondary"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/last_basal_dose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:paddingStart="2dp"
            android:textColor="?android:attr/textColorSecondary"
            tools:text="20U" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/aps_status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:gravity="center"
        app:layout_flexBasisPercent="100%"
        tools:ignore="UseCompoundDrawables">

        <LinearLayout
            android:id="@+id/insulin_req_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/statuslights_insulin_req"
                app:srcCompat="@drawable/ic_stats" />

            <TextView
                android:id="@+id/insulin_req_raw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:alpha="0.7"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="1.17U" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="/"
                android:textColor="?android:attr/textColorSecondary"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/insulin_req_median"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="~1.2U" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/eventual_bg_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="8dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/statuslights_eventual_bg"
                app:srcCompat="@drawable/ic_temptarget_high" />

            <TextView
                android:id="@+id/eventual_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="150" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="/"
                android:textColor="?android:attr/textColorSecondary"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/eventual_bg_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="110" />

            <TextView
                android:id="@+id/eventual_bg_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:lines="1"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="mmol/L" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.flexbox.FlexboxLayout>
